--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,20 @@
+
+# Valid logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
 node_modules
 dist
-.env
-.DS_Store
+dist-ssr
+*.local
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
